refactor: rename `allowAdditionalDocumentSubmission` to `allowAdditionalDocumentSubmissions` across models, properties, and APIs for consistency